data/all_generated_tests/raw_wast_tests/br_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1352.wast
;; 3. **Test Description:**    - **Test Name:** Nested Import Function Branch Test    - **Objective:** Check if the `br` instruction correctly manages branches within deeply nested structures involving imported functions.    - **Constraint:** Verifies correct label indexing and operand stack management with nested imports.    - **Relation to Incorrect Handling:** Ensures robustness in handling complex nested control flows across module boundaries.

(assert_invalid
  (module
    (import "test" "func_import" (func $func_import (param i32) (result i32)))
    (func (param i32) (result i32)
      (block (result i32)
        (loop (result i32)
          (call $func_import (br 2 (local.get 0)))
        )
      )
    )
  )
  "label index out of range"
)